--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -11,9 +11,9 @@
     <div id="money-table" class="am-alert am-alert-secondary" data-am-alert>
         <button type="button" class="am-close">&times;</button>
         <p class="am-text-sm">
-        总收入:<font class="am-text-success">{$AccountStatistic['SumInMoney']}</font> &nbsp;
-        总支出:<font class="am-text-danger" >{$AccountStatistic['SumOutMoney']}</font> &nbsp;
-          剩余:<font class="am-text-primary">{$AccountStatistic['SumInMoney']-$AccountStatistic['SumOutMoney']}</font>
+        总收入:<font class="am-text-success money-format">{$AccountStatistic['SumInMoney']}</font> &nbsp;
+        总支出:<font class="am-text-danger money-format" >{$AccountStatistic['SumOutMoney']}</font> &nbsp;
+          剩余:<font class="am-text-primary money-format">{$AccountStatistic['SumInMoney']-$AccountStatistic['SumOutMoney']}</font>
         </p>
     </div>
     
