完善搜索页金额数值格式化

--- a/Application/Home/View/Find/index.html
+++ b/Application/Home/View/Find/index.html
@@ -58,9 +58,9 @@
     <div id="money-table" class="am-alert am-alert-secondary" data-am-alert>
         <button type="button" class="am-close">&times;</button>
         <p class="am-text-sm">
-          收入:<font class="am-text-success">{$SumInMoney}</font> &nbsp;
-          支出:<font class="am-text-danger" >{$SumOutMoney}</font> &nbsp;
-          剩余:<font class="am-text-primary">{$SumInMoney - $SumOutMoney}</font>
+          收入:<font class="am-text-success money-format">{$SumInMoney}</font> &nbsp;
+          支出:<font class="am-text-danger money-format" >{$SumOutMoney}</font> &nbsp;
+          剩余:<font class="am-text-primary money-format">{$SumInMoney - $SumOutMoney}</font>
         </p>
     </div>
     
