--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -21,12 +21,18 @@
 <script src="__PUBLIC__/Home/js/amazeui.min.js"></script>
 
 <script type="text/javascript">
-window.onload = function() {
+// window.onload = function() {
+//     var div_money_arr = document.getElementsByClassName('money-format');
+//     for (var i = 0; i < div_money_arr.length; i++) {
+//         div_money_arr[i].innerText= number_format(div_money_arr[i].innerText,{$Think.config.MONEY_FORMAT_DECIMALS},'{$Think.config.MONEY_FORMAT_POINT}','{$Think.config.MONEY_FORMAT_THOUSANDS}');
+//     }
+// }
+$(function(){
     var div_money_arr = document.getElementsByClassName('money-format');
     for (var i = 0; i < div_money_arr.length; i++) {
         div_money_arr[i].innerText= number_format(div_money_arr[i].innerText,{$Think.config.MONEY_FORMAT_DECIMALS},'{$Think.config.MONEY_FORMAT_POINT}','{$Think.config.MONEY_FORMAT_THOUSANDS}');
     }
-}
+});
 </script>
 
 </body>
