--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -13,7 +13,7 @@
 <script src="__PUBLIC__/Home/js/amazeui.ie8polyfill.min.js"></script>
 <![endif]-->
 
-<script src="__PUBLIC__/Home/js/function.js"></script>
+<script src="__PUBLIC__/Home/js/function.min.js"></script>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="__PUBLIC__/Home/js/jquery.min.js"></script>
@@ -21,12 +21,6 @@
 <script src="__PUBLIC__/Home/js/amazeui.min.js"></script>
 
 <script type="text/javascript">
-// window.onload = function() {
-//     var div_money_arr = document.getElementsByClassName('money-format');
-//     for (var i = 0; i < div_money_arr.length; i++) {
-//         div_money_arr[i].innerText= number_format(div_money_arr[i].innerText,{$Think.config.MONEY_FORMAT_DECIMALS},'{$Think.config.MONEY_FORMAT_POINT}','{$Think.config.MONEY_FORMAT_THOUSANDS}');
-//     }
-// }
 $(function(){
     var div_money_arr = document.getElementsByClassName('money-format');
     for (var i = 0; i < div_money_arr.length; i++) {
