增加授权管理UI

--- a/Application/Home/View/Push/admin.html
+++ b/Application/Home/View/Push/admin.html
@@ -28,4 +28,22 @@
       <p><button type="submit" class="am-btn am-btn-success am-btn-block">提交</button></p>
     </fieldset>
   </form>
+
+  <!-- 授权管理 -->
+  <div class="am-form" method="post">
+    <fieldset>
+      <legend>授权管理</legend>
+      <form class="am-form-inline" role="form">
+        <div class="am-form-group">
+          <select name="push_name" id="doc-select-2">
+            <option value="Weixin">微信</option>
+          </select>
+        </div>
+        <div class="am-form-group">
+          <input type="text" name="push_value" class="am-form-field" placeholder="密钥">
+        </div>
+        <button type="submit" class="am-btn am-btn-success">添加</button>
+      </form>
+    </fieldset>
+  </div>
 </block>
